# loki

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/loki-cli/: Cargo.toml
crates/loki-cli/src/: main.rs
crates/loki-cli/tests/: cli.rs
crates/loki-core/: Cargo.toml
crates/loki-core/src/: config.rs  driver.rs  element.rs  error.rs  lib.rs  output.rs  query.rs
crates/loki-macos/: Cargo.toml
crates/loki-macos/src/: accessibility.rs  app.rs  driver.rs  input.rs  lib.rs  permission.rs  screenshot.rs  window.rs
docs/: INDEX.md  architecture.md  usage.md
