[workspace]
resolver = "2"
members = ["crates/loki-core", "crates/loki-macos", "crates/loki-cli"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/simonspoon/loki"
keywords = ["desktop", "automation", "accessibility", "testing", "macos"]
categories = ["development-tools::testing"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
